refactor(parsers): split parsers and back to sbt build def

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,6 +57,8 @@ jobs:
         component:
           - utils
           - client
+          - snapi-parser
+          - sql-parser
           - snapi-frontend
           - snapi-truffle
           - snapi-client
