--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -58,6 +58,28 @@ jobs:
         CI_CLEAN: clean
         CI_RELEASE: publishSigned
         CI_SNAPSHOT_RELEASE: publish
+    - name: sbt ci-release snapi-parser
+      run: ./release.sh
+      working-directory: snapi-parser
+      env:
+        SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+        PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+        PGP_SECRET: ${{ secrets.PGP_SECRET }}
+        CI_CLEAN: clean
+        CI_RELEASE: publishSigned
+        CI_SNAPSHOT_RELEASE: publish
+    - name: sbt ci-release sql-parser
+      run: ./release.sh
+      working-directory: sql-parser
+      env:
+        SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+        PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+        PGP_SECRET: ${{ secrets.PGP_SECRET }}
+        CI_CLEAN: clean
+        CI_RELEASE: publishSigned
+        CI_SNAPSHOT_RELEASE: publish
     - name: sbt ci-release snapi-frontend
       run: ./release.sh
       working-directory: snapi-frontend
@@ -140,80 +162,4 @@ jobs:
         body: |
           > something went wrong with `publish-snapi-components`
           > run [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed :x:
-        reactions: confused
-
-  publish-parsers:
-    runs-on: self-hosted
-    steps:
-    - if: github.event_name != 'repository_dispatch'
-      name: checkout caller ref
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - if: github.event_name == 'repository_dispatch'
-      name: checkout for PR comment
-      uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.client_payload.pull_request.head.sha }}
-        fetch-depth: 0
-    - name: sdkman java install
-      id: sdkman
-      shell: bash
-      run: |
-        export SDKMAN_DIR="$HOME/.sdkman"
-        [ ! -f "$SDKMAN_DIR/bin/sdkman-init.sh" ] && curl -s "https://get.sdkman.io?rcupdate=false" | bash
-        source $HOME/.sdkman/bin/sdkman-init.sh
-        yes n | sdk install java 21.0.1-graalce || true
-        sdk use java 21.0.1-graalce
-        echo "$SDKMAN_DIR/candidates/java/current/bin" >> $GITHUB_PATH
-    - uses: stCarolas/setup-maven@v5
-      with:
-        maven-version: 3.9.6
-    - uses: crazy-max/ghaction-import-gpg@v6
-      with:
-        gpg_private_key: ${{ secrets.PGP_SECRET }}
-        passphrase: ${{ secrets.PGP_PASSPHRASE }}
-    - uses: s4u/maven-settings-action@v3.0.0
-      with:
-        servers: |
-          [{
-            "id": "ossrh",
-            "username": "${{ secrets.SONATYPE_TOKEN_USER }}",
-            "password": "${{ secrets.SONATYPE_TOKEN }}"
-          }]
-        properties: |
-          [{
-            "key": "gpg.keyname",
-            "value": "${{ secrets.GPG_KEYNAME }}"
-          }]
-    - if: github.event_name == 'repository_dispatch'
-      name: publish to snapshots repo
-      working-directory: parsers
-      run: |
-        ./publish.sh
-        echo SNAPI_PARSER_VER="$(cat version)" >> $GITHUB_ENV
-    - if: github.event_name != 'repository_dispatch'
-      name: release
-      working-directory: parsers
-      run: |
-        ./release.sh
-        echo SNAPI_PARSER_VER="$(cat version)" >> $GITHUB_ENV
-    - if: github.event_name == 'repository_dispatch'
-      uses: peter-evans/create-or-update-comment@v4
-      with:
-        token: ${{ secrets.RAW_CI_PAT }}
-        repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
-        comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
-        body: |
-          > published parsers version: ${{ env.SNAPI_PARSER_VER }}
-        reactions: rocket
-    - if: failure() && github.event_name == 'repository_dispatch'
-      uses: peter-evans/create-or-update-comment@v4
-      with:
-        token: ${{ secrets.RAW_CI_PAT }}
-        repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
-        comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
-        body: |
-          > something went wrong with `publish-parsers`
-          > run [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) :x:
         reactions: confused
