--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -129,6 +129,8 @@ jobs:
       run: |
         echo "UTILS_VER=$(cat utils/version)" >> $GITHUB_ENV
         echo "CLIENT_VER=$(cat client/version)" >> $GITHUB_ENV
+        echo "SNAPI_PARSER_VER=$(cat snapi-parser/version)" >> $GITHUB_ENV
+        echo "SQL_PARSER_VER=$(cat sql-parser/version)" >> $GITHUB_ENV
         echo "SNAPI_FRONTEND_VER=$(cat snapi-frontend/version)" >> $GITHUB_ENV
         echo "SNAPI_TRUFFLE_VER=$(cat snapi-truffle/version)" >> $GITHUB_ENV
         echo "SNAPI_CLIENT=$(cat snapi-client/version)" >> $GITHUB_ENV
@@ -142,6 +144,8 @@ jobs:
         body: |
           > published utils version: ${{ env.UTILS_VER  }}
           > published client version: ${{ env.CLIENT_VER }}
+          > published snapi-parser version: ${{ env.SNAPI_PARSER_VER }}
+          > published sql-parser version: ${{ env.SQL_PARSER_VER }}
           > published snapi-frontend version: ${{ env.SNAPI_FRONTEND_VER }}
           > published snapi-truffle version: ${{ env.SNAPI_TRUFFLE_VER }}
           > published snapi-client version: ${{ env.SNAPI_CLIENT }}
