--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,11 +30,7 @@ jobs:
       with:
         ref: ${{ github.event.client_payload.pull_request.head.sha }}
         fetch-depth: 0
-    - if: github.event_name != 'repository_dispatch'
-      name: build all
-      run: ./rebuild.sh --release
-    - if: github.event_name == 'repository_dispatch'
-      name: build all
+    - name: build all
       run: ./rebuild.sh
     - name: sbt ci-release utils
       run: ./release.sh
