adapt ci publish and last cleanup

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - run: ./rebuild.sh
+      - run: ./publishLocal.sh
       - name: upload ivy build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -43,27 +43,8 @@ jobs:
           name: m2
           path: /home/sbtuser/.m2/repository
           retention-days: 1
-      - name: upload versions
-        uses: actions/upload-artifact@v4
-        with:
-          name: versions
-          path: ./**/version
-          retention-days: 1
   code-checks:
     needs: build
-    strategy:
-      fail-fast: false
-      matrix:
-        component:
-          - utils
-          - client
-          - snapi-parser
-          - sql-parser
-          - snapi-frontend
-          - snapi-truffle
-          - snapi-client
-          - python-client
-          - sql-client
     runs-on: self-hosted
     container:
       image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.9.6
@@ -73,15 +54,6 @@ jobs:
         password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v4
-      - name: sdkman java setup
-        id: sdkman
-        run: |
-          export HOME="/home/sbtuser"
-          export SDKMAN_DIR="$HOME/.sdkman"
-          source $SDKMAN_DIR/bin/sdkman-init.sh
-          yes n | sdk install java 21.0.1-graalce || true
-          sdk use java 21.0.1-graalce
-          echo "$SDKMAN_DIR/candidates/java/current/bin" >> $GITHUB_PATH
       - name: download ivy build artifacts
         uses: actions/download-artifact@v4
         with:
@@ -92,31 +64,23 @@ jobs:
         with:
           name: m2
           path: /home/sbtuser/.m2/repository
-      - name: download versions
-        uses: actions/download-artifact@v4
-        with:
-          name: versions
-      - name: headers
-        run: sbt headerCheckAll
-        working-directory: ${{ matrix.component }}
+      ##- name: headers
+      ##  run: sbt headerCheckAll
       - name: scala fmt
         run: sbt scalafmtCheckAll
-        working-directory: ${{ matrix.component }}
       - name: java fmt
         run: sbt javafmtCheckAll
-        working-directory: ${{ matrix.component }}
       - name: doc
         run: sbt doc
-        working-directory: ${{ matrix.component }}
   tests:
     needs: build
     strategy:
       fail-fast: false
       matrix:
         component:
-          - snapi-frontend
-          - snapi-client
-          - sql-client
+          - snapiFrontend
+          - snapiClient
+          - sqlClient
     runs-on: self-hosted
     env:
       SBT_FORK_OUTPUT_DIR : test-results
@@ -147,25 +111,10 @@ jobs:
         with:
           name: versions
       - name: test
-        run: |
-          test_version=$(cat ./version)
-          echo "Testing ${{ matrix.component }} version: $test_version"
-          ./test.sh
+        run:  sbt ${{ matrix.component }}/test
         working-directory: ${{ matrix.component }}
       - uses: mikepenz/action-junit-report@v4
         if: success() || failure()
         with:
           report_paths: ./**/test-reports/*.xml
           detailed_summary: true
-      - uses: actions/upload-artifact@v3
-        with:
-          name: executor-logs
-          path: test-results/executor-logs
-          retention-days: 4
-          if-no-files-found: ignore
-      - uses: actions/upload-artifact@v3
-        with:
-          name: heap-dumps
-          path: test-results/heap-dumps
-          retention-days: 4
-          if-no-files-found: ignore
