--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,6 +53,7 @@ jobs:
           path: /home/sbtuser/.m2/repository
           retention-days: 1
   code-checks:
+    needs: build-custom-deps
     runs-on: self-hosted
     container:
       image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.9.6
@@ -90,6 +91,7 @@ jobs:
       - name: doc
         run: sbt doc
   tests:
+    needs: build-custom-deps
     strategy:
       fail-fast: false
       matrix:
@@ -131,9 +133,6 @@ jobs:
       - uses: oNaiPs/secrets-to-env-action@v1.5
         with:
           secrets: ${{ toJSON(secrets) }}
-      - name: build custom deps
-        run: ./build.sh
-        working-directory: deps
       - name: test
         run: sbt ${{ matrix.component }}/test
       - uses: mikepenz/action-junit-report@v4
