--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,8 @@ name: CI
 on:
   pull_request:
     paths:
+      - build.sbt
+      - project/**
       - deps/**
       - utils/**
       - client/**
