--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -101,6 +101,7 @@ jobs:
           - snapiFrontend
           - snapiClient
           - sqlClient
+          - pythonClient
     runs-on: self-hosted
     env:
       SBT_FORK_OUTPUT_DIR : test-results
