refactor(build): integrate python-client to the single build def (#410)
`python-client` has been forgotten from the single build definition here
#405 .

We take advantage of this task to fix existing compilation error of this
component (see commit
[e1b7640](https://github.com/raw-labs/snapi/pull/410/commits/e1b764035da805450fb797e901006617d9e31f75))

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,6 +102,7 @@ jobs:
           - snapiFrontend
           - snapiClient
           - sqlClient
+          - pythonClient
     runs-on: self-hosted
     env:
       SBT_FORK_OUTPUT_DIR : test-results
