re-activate headerCheckAll

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -84,8 +84,8 @@ jobs:
           yes n | sdk install java 21.0.1-graalce || true
           sdk use java 21.0.1-graalce
           echo "$SDKMAN_DIR/candidates/java/current/bin" >> $GITHUB_PATH
-      ##- name: headers
-      ##  run: sbt headerCheckAll
+      - name: headers
+        run: sbt headerCheckAll
       - name: scala fmt
         run: sbt scalafmtCheckAll
       - name: java fmt
