--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,6 +76,15 @@ jobs:
         with:
           name: m2
           path: /home/sbtuser/.m2/repository
+      - name: sdkman java setup
+        id: sdkman
+        run: |
+          export HOME="/home/sbtuser"
+          export SDKMAN_DIR="$HOME/.sdkman"
+          source $SDKMAN_DIR/bin/sdkman-init.sh
+          yes n | sdk install java 22.0.1-graalce || true
+          sdk use java 22.0.1-graalce
+          echo "$SDKMAN_DIR/candidates/java/current/bin" >> $GITHUB_PATH
       - name: headers
         run: sbt headerCheckAll
       - name: scala fmt
