--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,8 +82,8 @@ jobs:
           export HOME="/home/sbtuser"
           export SDKMAN_DIR="$HOME/.sdkman"
           source $SDKMAN_DIR/bin/sdkman-init.sh
-          yes n | sdk install java 21.0.1-graalce || true
-          sdk use java 21.0.1-graalce
+          yes n | sdk install java 22.0.1-graalce || true
+          sdk use java 22.0.1-graalce
           echo "$SDKMAN_DIR/candidates/java/current/bin" >> $GITHUB_PATH
       - name: headers
         run: sbt headerCheckAll
@@ -92,7 +92,13 @@ jobs:
       - name: java fmt
         run: sbt javafmtCheckAll
       - name: doc
-        run: sbt doc
+        run: |
+          export HOME="/home/sbtuser"
+          export SDKMAN_DIR="$HOME/.sdkman"
+          source $SDKMAN_DIR/bin/sdkman-init.sh
+          yes n | sdk install java 22.0.1-graalce || true
+          sdk use java 22.0.1-graalce
+          sbt doc
   tests:
     needs: build-custom-deps
     strategy:
@@ -125,20 +131,17 @@ jobs:
         with:
           name: m2
           path: /home/sbtuser/.m2/repository
-      - name: sdkman java setup
-        id: sdkman
-        run: |
-          export HOME="/home/sbtuser"
-          export SDKMAN_DIR="$HOME/.sdkman"
-          source $SDKMAN_DIR/bin/sdkman-init.sh
-          yes n | sdk install java 21.0.1-graalce || true
-          sdk use java 21.0.1-graalce
-          echo "$SDKMAN_DIR/candidates/java/current/bin" >> $GITHUB_PATH
       - uses: oNaiPs/secrets-to-env-action@v1.5
         with:
           secrets: ${{ toJSON(secrets) }}
       - name: test
-        run: sbt ${{ matrix.component }}/test
+        run: |
+          export HOME="/home/sbtuser"
+          export SDKMAN_DIR="$HOME/.sdkman"
+          source $SDKMAN_DIR/bin/sdkman-init.sh
+          yes n | sdk install java 22.0.1-graalce || true
+          sdk use java 22.0.1-graalce
+          sbt ${{ matrix.component }}/test
       - uses: mikepenz/action-junit-report@v4
         if: success() || failure()
         with:
