--- a/jinja-sql-client/src/main/resources/reference.conf
+++ b/jinja-sql-client/src/main/resources/reference.conf
@@ -1,3 +1,6 @@
 raw.client.jinja-sql {
-    graalpy = "/Users/bgaidioz/tmp/jinja-pyenv/bin/graalpy"
+    graalpy {
+      executable = "/Users/bgaidioz/tmp/jinja-pyenv/bin/graalpy"
+      home = "/Users/bgaidioz/.pyenv/versions/graalpy-24.0.0"
+    }
 }
