--- a/jinja-sql-client/src/main/resources/reference.conf
+++ b/jinja-sql-client/src/main/resources/reference.conf
@@ -1,7 +1,7 @@
 raw.client.jinja-sql {
     graalpy {
-      executable = "/Users/bgaidioz/tmp/jinja-pyenv/bin/graalpy"
-      home = "/Users/bgaidioz/.pyenv/versions/graalpy-23.0.1"
+      executable = "/Users/alexzerntev/python-venvs/graalpy-venv/bin/graalpy"
+      home = "/Users/alexzerntev/.pyenv/versions/graalpy-24.0.0"
       logging = false
     }
 }
