--- a/jinja-sql-client/src/main/resources/reference.conf
+++ b/jinja-sql-client/src/main/resources/reference.conf
@@ -2,6 +2,8 @@ raw.client.jinja-sql {
     graalpy {
       executable = "/home/ld/python-venvs/graalpy-venv/bin/graalpy"
       home = "/home/ld/.pyenv/versions/graalpy-community-24.0.0"
+      core = "/home/ld/.pyenv/versions/graalpy-community-24.0.0/lib/graalpy23.1"
+      stdLib = "/home/ld/.pyenv/versions/graalpy-community-24.0.0/lib/python3.10"
       logging = false
     }
 }
