adapt ci and rebuild scripts

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,44 +19,10 @@ on:
 
 env:
   SBT_OPTS : -Dsbt.log.noformat=true -Xss2m -Xms1g
+  GITHUB_TOKEN: ${{ secrets.READ_PACKAGES }}
 
 jobs:
-  build-custom-deps:
-    runs-on: self-hosted
-    container:
-      image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.9.6
-      options: --user 1001
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.READ_PACKAGES }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: sdkman java setup
-        id: sdkman
-        run: |
-          export HOME="/home/sbtuser"
-          export SDKMAN_DIR="$HOME/.sdkman"
-          source $SDKMAN_DIR/bin/sdkman-init.sh
-          yes n | sdk install java 17.0.5-amzn || true
-          sdk use java 17.0.5-amzn
-          echo "$SDKMAN_DIR/candidates/java/current/bin" >> $GITHUB_PATH
-      - name: build custom deps
-        run: ./build.sh
-        working-directory: deps
-      - name: upload ivy build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name:  ivy
-          path: /home/sbtuser/.ivy2/local
-          retention-days: 1
-      - name: upload m2 build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: m2
-          path: /home/sbtuser/.m2/repository
-          retention-days: 1
   code-checks:
-    needs: build-custom-deps
     runs-on: self-hosted
     container:
       image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.9.6
@@ -66,16 +32,6 @@ jobs:
         password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v4
-      - name: download ivy build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: ivy
-          path: /home/sbtuser/.ivy2/local
-      - name: download m2 build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: m2
-          path: /home/sbtuser/.m2/repository
       - name: sdkman java setup
         id: sdkman
         run: |
@@ -100,7 +56,6 @@ jobs:
           sdk use java 21.0.1-graalce
           sbt doc
   tests:
-    needs: build-custom-deps
     strategy:
       fail-fast: false
       matrix:
@@ -121,16 +76,6 @@ jobs:
         password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v4
-      - name: download ivy build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: ivy
-          path: /home/sbtuser/.ivy2/local
-      - name: download m2 build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: m2
-          path: /home/sbtuser/.m2/repository
       - uses: oNaiPs/secrets-to-env-action@v1.5
         with:
           secrets: ${{ toJSON(secrets) }}
