Adding cache for connection pools

--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -14,4 +14,9 @@ raw.client.sql {
     idle-timeout = 30s
     connection-timeout = 30s
   }
+
+  fdw-db-cache {
+    size = 1000 // how many individual user databases we keep
+    duration = 30s // how long do we keep a user database cache
+  }
 }
