--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -17,6 +17,6 @@ raw.client.sql {
 
   fdw-db-cache {
     size = 1000 // how many individual user databases we keep
-    duration = 30s // how long do we keep a user database cache
+    duration = 30s // how long do we keep a user database
   }
 }
