--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -13,6 +13,7 @@ raw.client.sql {
     max-lifetime = 5m
     idle-timeout = 30s
     connection-timeout = 30s
+    gc-period = 1h
   }
 
   fdw-db-cache {
