--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -18,6 +18,6 @@ raw.client.sql {
 
   fdw-db-cache {
     size = 1000 // how many individual user databases we keep
-    duration = 30s // how long do we keep a user database
+    duration = 1h // how long do we keep a user database
   }
 }
