--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -13,5 +13,11 @@ raw.client.sql {
     max-lifetime = 5m
     idle-timeout = 30s
     connection-timeout = 30s
+    gc-period = 1h
+  }
+
+  fdw-db-cache {
+    size = 1000 // how many individual user databases we keep
+    duration = 1h // how long do we keep a user database
   }
 }
