--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,37 +24,16 @@ env:
 jobs:
   code-checks:
     runs-on: self-hosted
-    container:
-      image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.9.6
-      options: --user 1001
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v4
-      - name: sdkman java setup
-        id: sdkman
-        run: |
-          export HOME="/home/sbtuser"
-          export SDKMAN_DIR="$HOME/.sdkman"
-          source $SDKMAN_DIR/bin/sdkman-init.sh
-          yes n | sdk install java 21.0.1-graalce || true
-          sdk use java 21.0.1-graalce
-          echo "$SDKMAN_DIR/candidates/java/current/bin" >> $GITHUB_PATH
       - name: headers
-        run: sbt headerCheckAll
+        run: ./ci/checks headerCheckAll
       - name: scala fmt
-        run: sbt scalafmtCheckAll
+        run: ./ci/checks scalafmtCheckAll
       - name: java fmt
-        run: sbt javafmtCheckAll
+        run: ./ci/checks javafmtCheckAll
       - name: doc
-        run: |
-          export HOME="/home/sbtuser"
-          export SDKMAN_DIR="$HOME/.sdkman"
-          source $SDKMAN_DIR/bin/sdkman-init.sh
-          yes n | sdk install java 21.0.1-graalce || true
-          sdk use java 21.0.1-graalce
-          sbt doc
+        run: ./ci/checks doc
   tests:
     strategy:
       fail-fast: false
@@ -65,31 +44,33 @@ jobs:
           - sqlClient
           - pythonClient
     runs-on: self-hosted
-    env:
-      SBT_FORK_OUTPUT_DIR : test-results
-      COURSIER_PROGRESS : false
-    container:
-      image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.9.6
-      options: --user 1001 --cpus 6 --memory 32g -e HOME=/home/sbtuser
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v4
       - uses: oNaiPs/secrets-to-env-action@v1.5
         with:
           secrets: ${{ toJSON(secrets) }}
+      - run: env > .env
       - name: test
-        run: |
-          export HOME="/home/sbtuser"
-          export SDKMAN_DIR="$HOME/.sdkman"
-          source $SDKMAN_DIR/bin/sdkman-init.sh
-          yes n | sdk install java 21.0.1-graalce || true
-          sdk use java 21.0.1-graalce
-          echo "$SDKMAN_DIR/candidates/java/current/bin" >> $GITHUB_PATH
-          sbt ${{ matrix.component }}/test
+        run: sbt ${{ matrix.component }}/test
       - uses: mikepenz/action-junit-report@v4
         if: success() || failure()
         with:
-          report_paths: ./**/test-reports/*.xml
+          annotate_only: true
+          check_name: JUnit ${{ github.job }}  ${{ matrix.component }} report
+          report_paths: ${{ env.REPORTS_DIR }}/*.xml
           detailed_summary: true
+          require_tests: true
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: ${{ github.job }}-${{ github.run_number}}-${{ matrix.component }}-logs
+          path: ${{ env.LOGS_DIR }}/${{ env.WD }}-logs
+          retention-days: 7
+          if-no-files-found: ignore
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: ${{ github.job }}-${{ github.run_number}}-${{ matrix.component }}-heap-dumps
+          path: ${{ env.LOGS_DIR }}/${{ env.WD }}-logs
+          retention-days: 7
+          if-no-files-found: ignore
