--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
+      - run: pwd
       - run: check headerCheckAll
       - run: check scalafmtCheckAll
       - run: check javafmtCheckAll
